[package]
name = "ipcsockd"
description = "A super-server daemon for UNIX domain sockets"
authors = ["Pranav Karawale <https://karawale.in>"]
version = "0.1.0"
edition = "2021"

# Compiler optimizations picked up from
# https://arusahni.net/blog/2020/03/optimizing-rust-binary-size.html
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
signal-hook = "*"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
clap_mangen = "0.2"
clap = { version = "4", features = ["cargo", "derive"] }
